# fsl-continuum

./: .gitignore  BRANCH_REVIEW_REPORT.md  BRANCH_STATUS_DASHBOARD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  FINAL_PRODUCTION_STATUS_COMPLETE.md  LICENSE  MANIFEST.in  MERGE_RECOMMENDATIONS.md  PHASE4_SPECIFICATION_REVIEW_COMPLETE.md  PHASE_5_TESTING_SUITE_COMPLETE.md  README-new.md  README.md  SECURITY.md  TESTING_SUMMARY.md  TODO.md  copilot-task-agent-api.py  copilot-task-agent-desktop.html  copilot-task-agent-mobile.html  demo-unified-integration.py  execute_migration.py  mobile-desktop-app-ui.py  openspec-copilot-cli-integration.py  phase1_execution_report.json  phase6_validation_test.py  pyproject.toml  pyproject.toml.backup  pyproject_fixed.toml  pyproject_new.toml  pyproject_simple.toml  pytest.ini.backup  pytest_simple.ini  requirements-dev.txt  requirements.txt  schematics-continuum-bridge.v1.json  setup_fixed.py  setup_original.py  test-unified-copilot-integration.py  (+6 more)
.fsl_test_env/: pyvenv.cfg
.github/: CHANGELOG.md  COMPLETE_SUMMARY.md  CONTEXT_SUMMARY.md  CONTINUUM_ARCHITECTURE.md  FCUID_IMPLEMENTATION_COMPLETE.md  FEATURES.md  FSL_CONTINUUM_V2_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION-STATUS.md  MIGRATION_COMPLETE.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  PHASE3-COMPLETE.md  PHASE4-COMPLETE.md  PHASE4-SPEC.md  PHASE5-COMPLETE.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  README.md  SPEC-000-MIGRATION.md  TODO.md  VERSION
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  epic.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/docs/: BLOCKCHAIN_INTEGRATION.md  CONTINUUM_SETUP.md  FCUID_SECURITY_SYSTEM.md  MIGRATION_GUIDE.md  README.md
.github/neural-field/: neural-field-context.yaml
.github/quantum-engine/: consciousness_protocol_v4.py  etd_generator_v4.py  quantum_context_metrics_v4.py  recursive_framework_v4.py  resonance_measurement_v4.py  scoring_functions_v4.py  unified_field_engine_v4.py
.github/reliability/: README.md
.github/scripts/: blockchain-log.sh  context-analyzer.sh  fcuid-generator.js  fcuid-validator.js  fsl-init.sh  lookup-fcuid.js  store-fcuid-mapping.js  version-info.sh
.github/state/: continuum-state.json
.github/todo/: quantum-enhancement-phase1.md
.github/webhooks/: kanban-webhook.js
.github/workflows/: continuum-orchestrator.yml  fsl-advanced-security.yml  fsl-ai-pr-review.yml  fsl-complete-pipeline.yml  fsl-context-intelligence-orchestrator.yml  fsl-copilot-review.yml  fsl-copilot-task-agent-mobile.yml  fsl-decomposition.yml  fsl-droid-terminal-integration.yml  fsl-execution.yml  fsl-github-copilot-cli.yml  fsl-initiation.yml  fsl-merger.yml  fsl-orchestrator.yml  fsl-predictive-ai.yml  fsl-reliability-health-check.yml  fsl-reliability-main.yml  fsl-schematics-native-orchestrator.yml  fsl-security.yml  fsl-self-healing.yml  fsl-spec-copilot.yml  fsl-spec-driven.yml  fsl-unified-copilot-orchestrator.yml  fsl-web3-dao.yml  schemantics-zero-shot.yml
.mcp.backup.20251024-174220/: .env.example  Dockerfile  Dockerfile.enterprise  TODO.md  docker-compose.enterprise.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.mcp.backup.20251024-174220/docs/: DEMO.md  ENTERPRISE_DEMO.md  IMPLEMENTATION_SUMMARY.md  README.md
.mcp.backup.20251024-174220/src/: cli.ts  index.ts
.uvx/: config.toml
.uvx/scripts/: run_performance_tests.sh  run_tests.sh  setup.sh
docs/: README.md  expansion-summary.md  migration-execution-complete.md
docs/0001-getting-started/: 0001-overview.md  0002-quick-start.md  0003-installation.md  README.md
docs/0002-guides/: 0001-context-integration-guide.md  0003-mobile-desktop-app.md  README.md
docs/0003-architecture/: 0001-system-architecture.md  README.md  terminal-velocity-model.md  terminal-velocity-quickref.md
docs/0004-planning/: 0002-quantum-enhancement.md  0003-schematics-integration.md
docs/0004-semantic-languages/: 0001-baml-integration.md  README.md
docs/0005-reference/: 0001-api-reference.md  0002-configuration.md  0003-troubleshooting.md
docs/0006-deployment/: 0001-production-deployment.md  README.md
docs/0006-migration/: 0001-migration-complete.md  0003-migration-todo.md
docs/0007-completions/: 0001-implementation-complete.md
docs/architecture/: .gitkeep  context-integration.md  final-implementation.md
docs/completions/: EXPANSION-COMPLETION-SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md
docs/guides/: .gitkeep  RELIABILITY-IMPLEMENTATION-GUIDE.md  expansion-summary.md
docs/planning/: FSL-CONTINUUM-EXPANSION-PLAN.md  QUANTUM-ENHANCEMENT-CHECKLIST.md  QUANTUM-ENHANCEMENT-PROGRESS.md  QUANTUM-ENHANCEMENT-STATUS.md  README-SCHEMATICS-INTEGRATION.md  RESTRUCTURE_COMPLETE.md  ROOT_CLEANUP_NEEDED.md  SCHEMATICS-NATIVE-INTEGRATION.md  TODO-COMPLETED.md  TODO-QUANTUM-ENHANCEMENT-V4.md  phase1_5_and_phase2_xml_complete.md  phase1_semantic_languages_complete.md  phase2_documentation_migration_complete.md  phase3_source_code_migration_complete.md  phase3_source_code_migration_final_complete.md  phase3_testing_framework_complete.md  phase4_configuration_migration_complete.md  phase5_import_updates_complete.md  phase6_validation_complete.md  semantic_language_integration_plan.md
docs/quantum-enhancement/: .gitkeep  checklist.md
docs/schematics/: .gitkeep
docs/technical/: .gitkeep
examples/: basic_fsl_workflow.py
legacy/: README.md
openspec/: project.md
schematics-native-engine/: README.md  consciousness-detector.py  continuum-language-specification.json  copilot-integration.py  droid-exec-integration.py  github-grok-integration.py  openspec-generator.py  test-integration.py
src/config/: __init__.py  config_manager.py  continuum-state.json  dynamic_loader.py  enhanced_continuum_state.json  enhanced_continuum_state.py  enhanced_continuum_state_new.py  schematics-bridge.json  schematics_continuum_bridge.json  schematics_continuum_bridge.py
src/continuum/: __init__.py  fsl_core.py
tools/: fsl_cli.py
(+201 files in other folders)
