[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsl-continuum"
version = "3.0.0"
description = "Terminal Velocity CI/CD with persistent state and AI-native features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FSL Continuum Team", email = "team@fsl-continuum.org"}
]
maintainers = [
    {name = "FSL Continuum Team", email = "team@fsl-continuum.org"}
]
keywords = [
    "ci-cd",
    "devops", 
    "terminal-velocity",
    "flow-state",
    "persistent-state",
    "ai-native",
    "quantum-computing",
    "blockchain",
    "4-market-integration"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    "pydantic>=1.10.0",
    "redis>=4.3.0",
    "motor>=3.1.0",
    "cryptography>=3.4.0",
    "openai>=0.27.0",
    "anthropic>=0.3.0",
    "transformers>=4.21.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "qiskit>=0.43.0",
    "cirq>=1.0.0",
    "sympy>=1.12",
    "PyGithub>=1.58.0",
    "github-actions-api>=0.7.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.7.0",
    "prometheus-client>=0.16.0",
    "structlog>=22.0.0",
    "sentry-sdk>=1.28.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "docker>=6.1.0",
    "kubernetes>=26.1.0",
    "ansible-core>=2.14.0",
    "langchain>=0.0.200",
    "pyodbc>=4.0.39",
    "coverage>=7.2.0",
    "ddt>=1.7.0",
    "python-jose>=3.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.4.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-socket>=0.6.0",
    "factory-boy>=3.3.0",
    "faker>=18.9.0",
    "httpx>=0.24.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.21.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pip-audit>=2.5.0",
    "deptry>=0.12.0",
    "py-spy>=0.3.14",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.1.0",
    "snakeviz>=2.1.0",
    "ipython>=8.10.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "vscode-ext>=0.1.3",
    "cursor-ext>=0.1.2",
    "docker>=6.1.0",
    "docker-compose>=2.18.0",
    "localstack>=2.2.0",
    "terraform>=1.4.0",
    "awscli-local>=2.2.0",
    "gcloud-local>=0.1.0",
    "postgresql15>=15.4.0",
    "redis-server>=7.0.8",
    "build>=0.10.0",
    "twine>=4.0.0",
    "wheel>=0.40.0",
    "setuptools>=68.0.0",
    "gitpython>=3.1.31",
    "python-gitlab>=3.11.0",
    "python-decouple>=3.8",
    "honcho>=1.1.0",
    "gevent>=22.10.0",
    "autoflake>=2.2.0",
    "autopep8>=2.0.4",
    "pyupgrade>=3.3.2",
    "types-requests>=2.28.0",
    "types-setuptools>=68.0.0",
    "types-PyYAML>=6.0.0",
    "ruff>=0.0.241",
    "autopep8>=2.0.4",
    "vulture>=2.7",
    "pylint>=2.17.0",
    "prospector>=1.9.0",
    "pyroma>=4.2.0",
    "pipdeptree>=2.13.0",
    "pip-tools>=6.13.0",
    "check-manifest>=0.48",
    "semantic-release>=21.0.0",
    "bump2version>=1.0.1",
    "changelog-gen>=0.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.21.0",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-literate-nav>=0.5.0",
]
test = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-socket>=0.6.0",
    "factory-boy>=3.3.0",
    "faker>=18.9.0",
    "httpx>=0.24.0",
]
copilot = [
    "openai-whisper>=1.6.0",
    "streamlit>=1.25.0",
    "plotly>=5.14.0",
    "dash>=2.11.0",
]
mobile = [
    "kivy>=2.2.0",
    "kivymd>=0.1.3",
    "plyer>=2.1.0",
    "android-sdk>=30.0.0",
]
quantum = [
    "qiskit>=0.43.0",
    "cirq>=1.0.0",
    "sympy>=1.12",
    "pennylane>=0.32.0",
    "quimb>=0.7.0",
]
enterprise = [
    "ldap3>=2.9.0",
    "sshtunnel>=0.4.0",
    "vault>=1.15.0",
    "consul>=1.2.0",
    "etcd3>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fsl-continuum"
Documentation = "https://fsl-continuum.readthedocs.io/"
Repository = "https://github.com/your-org/fsl-continuum.git"
"Bug Tracker" = "https://github.com/your-org/fsl-continuum/issues"
Changelog = "https://github.com/your-org/fsl-continuum/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/your-org/fsl-continuum/blob/main/SECURITY.md"
"Code of Conduct" = "https://github.com/your-org/fsl-continuum/blob/main/CODE_OF_CONDUCT.md"
"Contributing Guidelines" = "https://github.com/your-org/fsl-continuum/blob/main/CONTRIBUTING.md"
Discussions = "https://github.com/your-org/fsl-continuum/discussions"

[project.scripts]
fsl = "fsl_continuum.cli:main"
fsl-server = "fsl_continuum.server:main"
fsl-desktop = "streamlit run src/copilot_integration/desktop_ui.py"
fsl-mobile = "streamlit run src/copilot_integration/mobile_ui.py"
test = "pytest"
test-cov = "pytest --cov=src"
lint = "black src && flake8 src && mypy src"
format = "black src && isort src"
docs = "mkdocs serve"
build = "python -m build"
publish = "twine upload dist/*"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fsl_continuum", "continuum", "copilot_integration", "quantum_engine", "schematics"]

[tool.setuptools.package-data]
"fsl_continuum" = ["*.yaml", "*.json", "templates/*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["fsl_continuum"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "quantum: marks tests requiring quantum simulation",
    "copilot: marks tests for copilot integration",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[tool.safety]
ignore = ["42902"]  # Click vulnerability, fixed in dev
